--- a/css2/estilos2.css
+++ b/css2/estilos2.css
@@ -12,20 +12,9 @@ p {
   font-family: 'Architects Daughter', cursiva;
   font-size: 18px; }
 
+/* index */
 .fondo1 {
   background-image: linear-gradient(to bottom, #ebab6b, #ffffff);
-  background-size: cover; }
-
-.fondo2 {
-  background-image: linear-gradient(to bottom, #e6bf98, #eaecc6);
-  background-size: cover; }
-
-.fondo3 {
-  background-image: linear-gradient(to bottom, #e0bc86, #f2f2f8);
-  background-size: cover; }
-
-.fondo4 {
-  background-image: linear-gradient(to bottom, #c8e6a2, #f2f2f8);
   background-size: cover; }
 
 .body__logo {
@@ -81,6 +70,19 @@ p {
   padding-top: 130px;
   padding-right: 20px; }
 
+/* sixsigma */
+.fondo2 {
+  background-image: linear-gradient(to bottom, #e6bf98, #eaecc6);
+  background-size: cover; }
+
+.fondo3 {
+  background-image: linear-gradient(to bottom, #e0bc86, #f2f2f8);
+  background-size: cover; }
+
+.fondo4 {
+  background-image: linear-gradient(to bottom, #c8e6a2, #f2f2f8);
+  background-size: cover; }
+
 /* each */
 .instagram-fondo {
   width: 30px;
@@ -107,6 +109,19 @@ p {
   padding-top: 25px;
   padding-right: 0px; }
 
+/* six_sigma */
+.title-link {
+  color: #dcdcf0;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 25px;
+  text-decoration: none;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-left: 40px; }
+
 .body__link {
   color: #272746;
   font-weight: bold;
@@ -114,6 +129,14 @@ p {
   font-style: oblique;
   font: size 45px;
   text-decoration: none; }
+
+.container-table {
+  width: 30%;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-auto-rows: 30px;
+  border: double;
+  border-color: #f3ecec; }
 
 .table__header {
   font-size: 22px;
@@ -139,6 +162,46 @@ p {
   border-bottom: solid;
   background-color: #5a5151; }
 
+/* sixsigma */
+.button {
+  border: black;
+  border-style: inherit;
+  font-style: italic;
+  font-size: medium;
+  font-weight: bold;
+  width: 100px;
+  margin-top: 30PX;
+  text-decoration: none; }
+
+.container-sixsigma {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 25px;
+  padding-top: 100px; }
+
+.parrafos {
+  font-style: oblique;
+  font-size: 18px;
+  color: #24044e;
+  font-weight: bold;
+  width: 1000px;
+  float: left;
+  margin-left: 40px;
+  margin-top: 15px; }
+
+.video {
+  padding-left: 25px;
+  float: right;
+  margin-right: 80px;
+  margin-left: 40PX;
+  margin-top: 20px;
+  padding-right: 25px; }
+
 /* formulario*/
 .form__titulo {
   font-family: Arial, Helvetica, sans-serif;
@@ -154,3 +217,19 @@ p {
   font-weight: bold;
   font-style: oblique;
   color: #0b0b79; }
+
+/* Desarrollo Web */
+.header_dw {
+  color: #eeeef7;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
+
+.pdw {
+  padding-top: 0px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: oblique;
+  color: #25035c;
+  font-weight: bold;
+  font-size: 16px; }
+
+.carousel_dw {
+  padding-top: 40px; }
