--- a/scss/estilos2.scss
+++ b/scss/estilos2.scss
@@ -3,9 +3,10 @@
 
 .menus {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     color: rgb(189, 183, 171);
+    margin-top: 15px;
 }
 
  /* index */
